# spessasynth_core_c

./: .gitignore  README.md
docs/generators/generaluser-repair/: sf2_fix_samples.ts
docs/generators/tg300b-sflist/: tg300b_map_generator.c  tg300b_to_xg.h
docs/plans/implemented/: SFLIST-PLAN.md
spessasynth_core/: CMakeLists.txt  CMakePresets.json  vcpkg.json
spessasynth_core.xcodeproj/: project.pbxproj
spessasynth_core/examples/: MIDI_MI33.xmi  example.c
spessasynth_core/include/spessasynth/: spessasynth.h
spessasynth_core/include/spessasynth/midi/: midi.h  midi_enums.h  nrpn_enums.h
spessasynth_core/include/spessasynth/sequencer/: sequencer.h
spessasynth_core/include/spessasynth/sflist/: sflist.h
spessasynth_core/include/spessasynth/soundbank/: generator_types.h  soundbank.h  soundbank_enums.h
spessasynth_core/include/spessasynth/synthesizer/: synth.h
spessasynth_core/include/spessasynth/synthesizer/dsp/: chorus.h  dattorro.h  dattorro_reverb.h  delay.h  delay_line.h  insertion.h  reverb.h
spessasynth_core/include/spessasynth/utils/: file.h  indexed_byte_array.h  riff_chunk.h  sync_primitives.h
spessasynth_core/src/midi/: midi_emidi.c  midi_loader.c  midi_writer.c
spessasynth_core/src/midi/parsers/: gmf.c  hmi.c  hmp.c  lds.c  mids.c  mus.c  parsers.h  rmidi.c  smf.c  xmf.c  xmi.c
spessasynth_core/src/sequencer/: sequencer.c
spessasynth_core/src/sflist/: sflist.c
spessasynth_core/src/soundbank/: dls_reader.c  ecw_reader.c  flac_decode.c  soundbank.c  soundfont_reader.c  vorbis_decode.c
spessasynth_core/src/synthesizer/: dynamic_modulators.c  lowpass_filter.c  midi_channel.c  modulation_envelope.c  processor.c  unit_converter.c  voice.c  volume_envelope.c  wavetable_oscillator.c
spessasynth_core/src/synthesizer/audio_engine/: parameters.c
spessasynth_core/src/synthesizer/audio_engine/channel/: awe32.c  controller_change.c  data_entry.c  dynamic_modulator_system.c  note_off.c  note_on.c  program_change.c  render_voice.c  reset.c  reset_controllers.c
spessasynth_core/src/synthesizer/audio_engine/channel/data_entry/: data_entry.c  data_entry_fine.c
spessasynth_core/src/synthesizer/audio_engine/effects/chorus/: chorus.c
spessasynth_core/src/synthesizer/audio_engine/effects/delay/: delay.c
spessasynth_core/src/synthesizer/audio_engine/effects/insertion/: insertion.c
spessasynth_core/src/synthesizer/audio_engine/effects/reverb/: dattorro.c  reverb.c
spessasynth_core/src/synthesizer/audio_engine/engine_components/: compute_modulator.c  dynamic_modulator_system.c  midi_channel.c  unit_converter.c  voice.c
spessasynth_core/src/synthesizer/audio_engine/engine_components/dsp_chain/: lfo.c  lowpass_filter.c  modulation_envelope.c  render_voice.c  volume_envelope.c  wavetable_oscillator.c
spessasynth_core/src/synthesizer/audio_engine/engine_methods/: note_off.c  note_on.c  portamento_time.c  program_change.c  system_exclusive.c
spessasynth_core/src/synthesizer/audio_engine/engine_methods/controller_control/: controller_change.c  reset_controllers.c
spessasynth_core/src/synthesizer/audio_engine/engine_methods/controller_control/data_entry/: awe32.c  data_entry_coarse.c  data_entry_fine.c
spessasynth_core/src/synthesizer/audio_engine/engine_methods/system_exclusive/: handle_gm.c  handle_gs.c  handle_xg.c  roland.c  universal.c  yamaha.c
spessasynth_core/src/synthesizer/dsp/: chorus.c  dattorro_reverb.c  delay.c  delay_line.c  insertion.c  reverb.c
spessasynth_core/src/utils/: byte_functions.c  file.c  indexed_byte_array.c  riff_chunk.c  sync_primitives.c  wav_writer.c
